# RMSD

./: .gitignore  LICENSE.md  README.md  RMSD.py  setup.cfg
src/munkres_rmsd/: RMSD.py  __init__.py
tests/: __init__.py  test_rmsd.py
tests/resources/: SD006053.sdf  SD006054.sdf
