[metadata]
name = munkres_rmsd
version = 0.0.1-dev
description = Proper RMSD calculation between molecules using the Kuhn-Munkres Hungarian algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OlivierBeq/RMSD
author = Olivier J.M. Béquignon
author_email = olivier.bequignon.maintainer@gmail.com
maintainer = Olivier J.M. Béquignon
maintainer_email = olivier.bequignon.maintainer@gmail.com
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords =
    RMSD
    docking poses
    atom mapping


[options]
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    numpy
    scipy
    rdkit


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints


testing =
    pytest
